Added Images, modified README to credit image owners

--- a/index.html
+++ b/index.html
@@ -25,31 +25,30 @@
         <div class="bx hero">
             <div class="hero-1 hero-title">
                     <h1>Hmmm Yes. Birbs</h1>
-                    <p>Birbs yes. This page has birbs. Yes, Birbs.
-                </p>
+                    <p>Birbs yes. This page has birbs. Yes, Birbs.</p>
                 <button type="button">Sign Up</button>
             </div>
             <div class="hero-1 hero-image">
-                <img src="" alt="birb">
+                <img src="images/play.jpg" alt="birb">
             </div>
         </div>
         <div class="bx content">
             <h2>Types of Birbs</h2>
             <div class="content-info">
                 <div>
-                    <img src="">
+                    <img src="images/angry.jpg">
                     <p>Screaming Birb</p>
                 </div>
                 <div>
-                    <img src="">
+                    <img src="images/sing.jpg" style="object-position: 90% 5%">
                     <p>Singing Birb</p>
                 </div>
                 <div>
-                    <img src="">
+                    <img src="images/sleep.jpg" style="object-position: 10% 10%">
                     <p>Sleepy Birb</p>
                 </div>
                 <div>
-                    <img src="">
+                    <img src="images/birb.jpg">
                     <p>Birb</p>
                 </div>
             </div>
